proxy/envoy-dc1.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9050
static_resources:
  listeners:
  - name: ingress_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8050
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_fallback
  - name: xdcr_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 7050
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: xdcr_local
            virtual_hosts:
            - name: xdcr_local
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local
  clusters:
  - name: local_fallback
    connect_timeout: 0.25s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.aggregate
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.aggregate.v3.ClusterConfig
        clusters:
          - local
          - xdcr
  - name: local
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    health_checks:
        timeout: 2s
        interval: 10s
        unhealthy_threshold: 1
        healthy_threshold: 1
        http_health_check:
          path: "/mock/health"
    load_assignment:
      cluster_name: local
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dc-replication-dc1-server-1
                port_value: 8080
  - name: xdcr
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xdcr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dc-replication-dc2-proxy-1
                port_value: 7060
